--- a/JS Basic practice/034-properties_style.html
+++ b/JS Basic practice/034-properties_style.html
@@ -8,14 +8,22 @@
 </head>
 <body>
     <!-- css properties
+
     color
     font-family
     -moz-radial-gradient -->
+
+    <div style="background: bisque; border-radius: 8px; text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, delectus.</div>
     <script>
         // js properties
+
         // color
         // fontFamily - camelCasing
         // MozRadialGradient - PascalCasing
+
+        let div = document.querySelector("div");
+        div.style.backgroundColor = "gray";
+        div.style.borderRadius = "50px";
     </script>
 </body>
 </html>
