--- a/JS Basic practice/034-properties_style.html
+++ b/JS Basic practice/034-properties_style.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- свойство style работает с inline styles -->
+
+
     <!-- css properties
 
     color
