add ex 058-mouse_event_sample

--- a/JS Basic practice/054-mouse_events.html
+++ b/JS Basic practice/054-mouse_events.html
@@ -34,7 +34,7 @@
 
       function mouseMoveHandler(e) {
         //добавляя параметр в определение функции, мы можем получить доступ к объекту события и использовать его свойства
-        let message = `X:${e.clientX}; Y:${e.clientY}`;
+        let message = `X:${e.clientX}; Y:${e.clientY}`; //координаты - курсор мыши относительно левого края окна браузера (в пикселях)
         div.textContent = message;       
       }
     </script>
