--- a/JS Basic practice/058-mouse_event_sample.html
+++ b/JS Basic practice/058-mouse_event_sample.html
@@ -44,6 +44,11 @@
                 div.style.left = e.clientX - offsetX + "px"; //учитываем сохранение отступов самого элемента от указателя мыши
             }
         });
+
+        //в момент когда клавиша отпускается прекращаем перемещение div
+        document.addEventListener("mouseup", function(e){
+            move = false;
+        });
     </script>
 </body>
 </html>
