add hw 009 + some changes

--- a/JS Basic hw/005-table_properties.html
+++ b/JS Basic hw/005-table_properties.html
@@ -23,6 +23,7 @@
     </style>
   </head>
   <body>
+    <!-- <tbody> автоматически генерируется браузером -->
     <table id="statsTable">
       <tr>
         <th>Месяц</th>
