--- a/JS Basic hw/006-table_colors.html
+++ b/JS Basic hw/006-table_colors.html
@@ -23,6 +23,7 @@
   </head>
 
   <body>
+    <!-- <tbody> автоматически генерируется браузером -->
     <table id="statsTable">
       <tr>
         <td>Январь</td>
