some changes ex with table

--- a/JS Basic practice/015-table_properties.html
+++ b/JS Basic practice/015-table_properties.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-
+    <!-- <tbody> автоматически генерируется браузером -->
     <table id="statsTable">
         <tr>
             <td>Январь</td>
