--- a/JS Basic practice/014-navigations_DOM_table_ok.html
+++ b/JS Basic practice/014-navigations_DOM_table_ok.html
@@ -19,6 +19,7 @@
     </style>
 </head>
 <body>
+    <!-- <tbody> автоматически генерируется браузером -->
     <table id="statsTable">
         <tr>
             <th>Name</th>
