--- a/JS Basic hw/009-table_delete_errors_indexing.html
+++ b/JS Basic hw/009-table_delete_errors_indexing.html
@@ -32,31 +32,27 @@
       </tr>
       <tr>
         <td>Февраль</td>
-        <td>140</td>
+        <td>100</td>
       </tr>
       <tr>
         <td>Март</td>
-        <td>115</td>
+        <td>120</td>
       </tr>
       <tr>
         <td>Апрель</td>
-        <td>100</td>
+        <td>90</td>
       </tr>
       <tr>
         <td>Май</td>
+        <td>90</td>
+      </tr>
+      <tr>
+        <td>Июнь</td>
         <td>80</td>
       </tr>
       <tr>
-        <td>Июнь</td>
-        <td>90</td>
-      </tr>
-      <tr>
-        <td>Июнь</td>
-        <td>90</td>
-      </tr>
-      <tr>
         <td>Июль</td>
-        <td>100</td>
+        <td>500</td>
       </tr>
     </table>
 
@@ -75,19 +71,19 @@
       //rowIndex - порядковый номер строки
     let table = document.querySelector("#statsTable");
       
-    for(let i=0; i < table.rows.length; i++){
+    for(let i=0; i < table.rows.length; i++){//[0-6]
 
-        let td = table.rows[i].cells[1];
+        let td = table.rows[i].cells[1];//<td> в которых находятся числовые значения
 
         if(td.textContent < 100){
-            table.deleteRow(i); // 0
+            table.deleteRow(i); //позволяет удалить строку таблицы по указанному индексу
             // [20,100,120,90,90,80,500]
             //   0   1   2  3  4  5   6
             // [100,120,90,90,80,500]
             //    0   1  2  3  4   5
             // [100,120,90,80,500]
             //    0   1  2  3   4   
-            i--; // 1
+            i--; // если элемент был удален, на его месте, под тем же индексом, будет находится следующий элемент
         }
     }
     </script>
