--- a/JS Basic hw/009-table_delete_errors_indexing.html
+++ b/JS Basic hw/009-table_delete_errors_indexing.html
@@ -64,28 +64,44 @@
         удалять нужно не ячейку td, в которой находится значение, а строку tr, в которой расположена эта ячейка).
         */
 
-      //solution
       //Элемент table представляет дополнительные свойства для работы с элементами
       //rows - коллекция строк таблицы <tr>
       //cells - коллекция <td> и <th> находящихся в <tr>
       //rowIndex - порядковый номер строки
-    let table = document.querySelector("#statsTable");
-      
-    for(let i=0; i < table.rows.length; i++){//[0-6]
 
-        let td = table.rows[i].cells[1];//<td> в которых находятся числовые значения
+      //solution1
+      function solution1() {
+        let table = document.querySelector("#statsTable");
 
-        if(td.textContent < 100){
+        for (let i = 0; i < table.rows.length; i++) {
+          //[0-6]
+
+          let td = table.rows[i].cells[1]; //<td> в которых находятся числовые значения
+
+          if (td.textContent < 100) {
             table.deleteRow(i); //позволяет удалить строку таблицы по указанному индексу
             // [20,100,120,90,90,80,500]
             //   0   1   2  3  4  5   6
             // [100,120,90,90,80,500]
             //    0   1  2  3  4   5
             // [100,120,90,80,500]
-            //    0   1  2  3   4   
+            //    0   1  2  3   4
             i--; // если элемент был удален, на его месте, под тем же индексом, будет находится следующий элемент
+          }
         }
-    }
+      }
+
+      //solution2
+      function solution2(){
+        let secondColumnTd = document.querySelectorAll("td:nth-child(2)");// это переменная, содержащая ссылки на все элементы td второго столбца таблицы.
+        for (const td of secondColumnTd) {//проходим по всем ссылкам, нет привязки к индексам
+          if(td.textContent < 100){
+            td.parentElement.remove();
+          }
+        }
+      }
+
+      solution2();
     </script>
   </body>
 </html>
