--- a/JS Basic practice/012-6_navigations_DOM.html
+++ b/JS Basic practice/012-6_navigations_DOM.html
@@ -1,4 +1,17 @@
-<!-- *Все эти элементы выполняют навигацию только по узлам элементам -->
+<!-- рассматриваем навигацию только по Element, но так же мы можем использовать методы для получения любого Node -->
+
+<!-- например
+parentNode и parentElement - это два свойства, которые возвращают родительский элемент DOM-узла.
+
+parentNode возвращает родительский узел, который может быть любым узлом,
+включая элементы, комментарии, текстовые узлы и другие. 
+
+parentElement возвращает только родительский элемент, т.е. элемент-контейнер,
+который может содержать другие элементы и узлы.
+
+Кроме того, свойство parentElement более новое и поддерживается не всеми браузерами.
+В то время как parentNode поддерживается всеми современными браузерами.-->
+
 
 <!-- from #elem -->
 1. children - предоставляет доступ к дочерним элементам 
