change name of 031

--- a/JS Basic practice/031-properties_and_methods_attribute.html
+++ b/JS Basic practice/031-properties_and_methods_attribute.html
@@ -18,7 +18,7 @@
       let div2 = document.querySelector("#div2");
 
       console.log(div1.hasAttribute("myAttribute")); //true or false
-      console.log(div1.getAttribute("myAttribute")); //output "custom"
+      console.log(div1.getAttribute("myAttribute")); //получаем нужный атрибут = output "custom"
 
       div1.setAttribute("myAttribute", "new value"); //change value for attribute "myAttribute" to "new value"
       console.log(div1.getAttribute("myAttribute")); //output "new value"
