repetition and addition

--- a/grid practice/grid-auto/index.html
+++ b/grid practice/grid-auto/index.html
@@ -22,7 +22,7 @@
         <div class="block yellowgreen">6</div>
     </div>
 
-    <h2>enother example grid implicit</h2>
+    <h2>another example grid implicit</h2>
     <p>а тут мы прописали размер колонки 100px и двух строк по 150px и 100px</p>
     <div class="container d-grid imp-vs-ex2">
         <div class="block red">1</div>
