small changes 001ex and create 002ex copy index.html

--- a/REACT practice/002-ex/index.html
+++ b/REACT practice/002-ex/index.html
@@ -21,6 +21,6 @@
     <div id="inputVariable"></div>
 
     <!-- type указываем обязательно, для преобразования кода -->
-    <script src="index.js" type="text/babel"></script> 
+    <script src="js/index.js" type="text/babel"></script> 
 </body>
 </html>
