add ex 002 conditions and className

--- a/REACT practice/002-conditions_and_className/index.html
+++ b/REACT practice/002-conditions_and_className/index.html
@@ -14,13 +14,9 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
-    <div id="app"></div>
-
-    <div id="input"></div><br/>
-    <div id="inputJsx"></div><br/>
-    <div id="inputVariable"></div>
+    <div id="app"></div><br/>
 
     <!-- type указываем обязательно, для преобразования кода -->
-    <script src="js/index.js" type="text/babel"></script> 
+    <script src="index.js" type="text/babel"></script> 
 </body>
 </html>
