--- a/REACT practice/my-app/public/index.html
+++ b/REACT practice/my-app/public/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="app"></div>
-    <div id="app2"></div>
+    <div id="funCompMyApp"></div>
+    <div id="classCompMyApp2"></div>
+    <div id="classAppStates"></div>
+    <div id="funAppStates"></div>
   </body>
 </html>
