changed js hw basic

--- a/JS Basic hw/001-querySelectorAll_borders.html
+++ b/JS Basic hw/001-querySelectorAll_borders.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 1</title>
+    <title>Task</title>
   </head>
 
   <body>
@@ -41,8 +41,8 @@
 
   <script>
     /* 
-    Задание:
-    Найдите на странице все параграфы с классом border и добавьте для них сплошную красную рамку толщиной в 1px
+      Задание:
+      Найдите на странице все параграфы с классом border и добавьте для них сплошную красную рамку толщиной в 1px
     */
 
     let pBorder = document.querySelectorAll(".border");
