--- a/JS Basic hw/002-random_color_borders.html
+++ b/JS Basic hw/002-random_color_borders.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 2</title>
+    <title>Task</title>
 </head>
 
 <body>
@@ -25,9 +25,9 @@
 
 <script>
     /* 
-    Задание:
-    getRandomColor функция, которая возвращает случайно сгенерированный цвет в формате #001122
-    Используя функцию getRandomColor добавьте для каждого параграфа рамку случайного цвета
+        Задание:
+        getRandomColor функция, которая возвращает случайно сгенерированный цвет в формате #001122
+        Используя функцию getRandomColor добавьте для каждого параграфа рамку случайного цвета
     */
     function getRandomColor() {
         var letters = '0123456789ABCDEF';
