--- a/JS Basic hw/003-first_and_last_elements.html
+++ b/JS Basic hw/003-first_and_last_elements.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 4</title>
+    <title>Task</title>
   </head>
 
   <body>
@@ -43,9 +43,9 @@
 
   <script>
     /* 
-    Задание:
-    Для первого и последнего элемента li для всех ul на данной странице
-    добавьте сплошную красную рамку толщиной в 1px
+      Задание:
+      Для первого и последнего элемента li для всех ul на данной странице
+      добавьте сплошную красную рамку толщиной в 1px
     */
 
     let ulElements = document.querySelectorAll("ul");
