--- a/JS Basic hw/005-table_properties.html
+++ b/JS Basic hw/005-table_properties.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 3</title>
+    <title>Task</title>
 
     <style>
       body {
@@ -82,7 +82,7 @@
         Задание:
         Добавьте строку "Итого" для таблицы statsTable. Напишите сценарий, который выводит сумму всех числовых значений колонок.
         В div с id result выведите сообщение "Отдел 1 сделал больше продаж" или "Отдел 2 сделал больше продаж"... на основе раннее вычисленных значений в строке "Итого".
-        */
+      */
 
       //находим элементы
       let tbody = document.querySelector("tbody"); //появляется в браузере автоматически, ниже тега <table>
