--- a/JS Basic hw/006-table_colors.html
+++ b/JS Basic hw/006-table_colors.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 4</title>
+    <title>Task</title>
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -64,7 +64,7 @@
         Напишите сценарий, который на основании значений во второй колонке таблицы #statsTable поменяет цвет строк таблицы (tr)
         Если во второй ячейке значение больше 100, строка должна отображаться зеленым цветом, если значение менее 100 - красным цветом.
         Для смены цвета строки используйте код row.style.backgroundColor = "цвет"
-        */
+      */
 
       let output = document.querySelector("#output");
       const allRows = Array.from(document.querySelector("#statsTable").rows); //Array.from() - метод для создания нового массива из коллекции
