--- a/JS Basic hw/007-choose_company_informations.html
+++ b/JS Basic hw/007-choose_company_informations.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 5</title>
+    <title>Task</title>
 </head>
 
 <body>
@@ -36,9 +36,9 @@
         let lowestBalanceCompany = document.querySelector("#lowestBalanceCompanyOutput");
 
         /*
-        Задание:
-        Перепишите код таким образом, чтобы он не поменял своего поведения,
-        но результат работы сценария выводился не в консоль, а в соответствующие <p>.
+            Задание:
+            Перепишите код таким образом, чтобы он не поменял своего поведения,
+            но результат работы сценария выводился не в консоль, а в соответствующие <p>.
         */
         // массив сгенерирован с помощью https://next.json-generator.com/
         let users = [
