--- a/JS Basic hw/010-create_table_function.html
+++ b/JS Basic hw/010-create_table_function.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 4</title>
+    <title>Task</title>
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -29,7 +29,7 @@
         Создайте таблицу (table, tr, td) на основе массива объектов с именем source. Каждый объект - отдельная строка таблицы. 
         Свойство month - значение для первой колонок.
         Свойство amount - значение для второй колонки.
-        */
+      */
 
       let source = [
         {
