--- a/JS Basic hw/004-collection_HTML_elements.html
+++ b/JS Basic hw/004-collection_HTML_elements.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 5</title>
+    <title>Task</title>
 
     <style>
       body {
@@ -59,7 +59,7 @@
         Задание:
         Поменяйте вызовы методов getElementById, getElementsByName, getElementsByTagName, getElementsByClassName 
         на вызовы методов querySelector или querySelectorAll так, чтобы поведение сценария не изменилось.
-        */
+      */
 
       let paragraph = document.querySelector("#first"); //getElementById
       paragraph.style.border = "2px solid red";
