--- a/JS Basic hw/009-table_delete_errors_indexing.html
+++ b/JS Basic hw/009-table_delete_errors_indexing.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 3</title>
+    <title>Task</title>
 
     <style>
       body {
@@ -62,7 +62,7 @@
         Напишите сценарий, который удалит строки таблицы, в которых во второй колонке находятся значения меньше 100.
         (В прошлом уроке были рассмотрены примеры, показывающие как получить доступ к родительским элементам, так как 
         удалять нужно не ячейку td, в которой находится значение, а строку tr, в которой расположена эта ячейка).
-        */
+      */
 
       //Элемент table представляет дополнительные свойства для работы с элементами
       //rows - коллекция строк таблицы <tr>
