--- a/JS Basic hw/012-dataset_color.html
+++ b/JS Basic hw/012-dataset_color.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 01</title>
+    <title>Task</title>
   </head>
   <body>
     <div data-color="red">Div 1</div>
@@ -15,8 +15,7 @@
       /*
         Задание:
         Напишите сценарий, который поменяет цвет текста элементов div, на тот, который указан в качестве значения атрибута data-color
-        */
-
+      */
       
       document.querySelectorAll("[data-color]").forEach((element) => {
         element.style.color = element.dataset.color;
