--- a/JS Basic hw/014-remove_element_by_attribute.html
+++ b/JS Basic hw/014-remove_element_by_attribute.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 03</title>
+    <title>Task</title>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
       /*
         Задание:
         Напишите сценарий, который удалит на странице элементы с атрибутом data-remove
-        */
+      */
 
       let elements = document.querySelectorAll("[data-remove]");
       for (const e of elements) {
