--- a/JS Basic hw/016-same_object_properties_to_attributes.html
+++ b/JS Basic hw/016-same_object_properties_to_attributes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 05</title>
+    <title>Task</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
         
         Попробуйте написать универсальную функцию, которая сможет выводить любой объект с любыми свойствами в разметку в соответствующие элементы, помеченные атрибутом.
         Для обхода свойств объекта, можно использовать цикл for in
-        */
+      */
 
       let user = {
         firstName: "John",
