--- a/REACT practice/my-app/public/index.html
+++ b/REACT practice/my-app/public/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
   </head>
+  
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="funCompMyApp"></div>
     <div id="classCompMyApp2"></div>
+    
     <div id="classAppStates"></div>
     <div id="funAppStates"></div>
+
+    <div id="listUsers"></div>
   </body>
 </html>
